Fix alignment for Easy Social Icons updated version

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1,5 +1,13 @@
 .template-styles-grid {
+	
   [class*="span"] {
 		margin-bottom: 15px;
   }
+}
+
+.text-right {
+
+	#easy-social-icons ul.jssocialicons-horizontal > li {
+		float: none;
+	}
 }
